# ADMotor

./: CMakeLists.txt  main.cpp
ADMotorTests/: CMakeLists.txt
ADMotorTests/UITests/: CMakeLists.txt  SDLWindowTest.cpp  SDLWindowTest.h  main.cpp
ADMotorTests/lib/googletest-main/docs/: gmock_cook_book.md
ADMotorTests/tests/: ADComponentTest.cpp  ADManagerComponentTest.cpp  ADManagerObjectTest.cpp  ADObjectTest.cpp  ADTransformTest.cpp  CMakeLists.txt  ComponentTest.h  RandomTest.cpp
header/: CMakeLists.txt
header/ADMotor/: ADApplication.h  ADComposit.h  ADManagerComponent.h  ADManagerObject.h  ADManagerWindow.h  ADObject.h  ADWindow.h
header/Component/: ADComponent.h  ADSprite.h  ADTransform.h
header/Structure/: Point3D.h
src/ADMotor/: ADApplication.cpp  ADComposit.cpp  ADManagerComponent.cpp  ADManagerObject.cpp  ADManagerWindow.cpp  ADObject.cpp  ADWindow.cpp
src/Component/: ADComponent.cpp  ADSprite.cpp  ADTransform.cpp
